textures loaded into table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 authors = ["Paul Tilley <ptilley1@binghamton.edu>"]
 
 [dependencies]
-sdl2 = "0.31.0"
+
+[dependencies.sdl2]
+version = "0.31.0"
+default-features = false
+features = ["image"]
